--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ authors = [
 ]
 
 license = { file="LICENSE.txt" }
-readme = "README.rst"
+readme = "README.md"
 
 
 [project.optional-dependencies]
