packaging: fix license badge
Signed-off-by: Florian Scherf <mail@florianscherf.de>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ authors = [
 license = { file="LICENSE.txt" }
 readme = "README.md"
 
+classifiers = [
+  "License :: OSI Approved :: MIT License",
+]
+
 
 [project.optional-dependencies]
 dev = [
